[package]
name = "dt_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# alkahest = "0.3.0"
# js-sys = "0.3.72"
# wasm-bindgen = "0.2.93"
# web-sys = { version = "0.3.72", features = ["BinaryType","Blob","ErrorEvent","FileReader","MessageEvent","ProgressEvent","WebSocket"] }
dt_lib = { path = "../dt_lib" }
tokio = { version = "*", features = ["sync", "rt", "process", "macros", "fs", "time"] }
tokio-tungstenite = "0.24.0"
tungstenite = "0.24.0"
futures-util = "*"
alkahest = { git = "https://github.com/zakarumych/alkahest.git", rev = "99a5b68", features=["derive"] }
futures-channel = { version = "0.3.31", features = ["futures-sink", "sink"] }
