[package]
name = "dt_editor"
version = "0.1.0"
edition = "2021"
[dependencies]
egui = { version = "0.29" }
egui-probe = { version = "0.6", features = ["derive"] }
eframe = { version = "0.29", features = ["serde", "persistence"] }
egui_extras = { version = "0.29", features = ["all_loaders"] }
syn = { version = "2.0", features = ["extra-traits"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
egui-snarl = { version = "0.5", features = ["egui-probe", "serde"] }
dt_lib = { path = "../dt_lib"}
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
